--- a/reserva/src/components/Login/login.css
+++ b/reserva/src/components/Login/login.css
@@ -1,10 +1,43 @@
 @media all and (min-width: 480px) {
     .Login {
-      padding: 60px 0;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
     }
   
-    .Login form {
-      margin: 0 auto;
-      max-width: 320px;
+    .FormLogin {
+      width: 400px;
+      background: #fff;
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;     
     }
+    img {
+      width: 100px;
+      margin: 10px 0 40px;
+      }
+
+      .inputForm {
+        flex: 1;
+        height: 46px;
+        margin-bottom: 15px;
+        padding: 0 20px;
+        color: #777;
+        font-size: 30px;
+        width: 100%;
+        border: 1px solid #ddd;
+        }
+
+        .BtnLogin {
+          color: #fff;
+          font-size: 16px;
+          background: #fc6963;
+          height: 56px;
+          border: 0;
+          border-radius: 5px;
+          width: 100%;
+        }
+
   }
