--- a/reserva/src/components/Home/home.css
+++ b/reserva/src/components/Home/home.css
@@ -1,8 +1,5 @@
-.homeText{
-    font-size: 35px;
-    color: red;
-    text-align: center;
-    position: relative;
-    top:30px;
-    text-shadow: 2px 2px 2px gray;
+
+img{
+    width: 482px;  
+    height: 339px;
 }
