--- a/reserva/src/index.css
+++ b/reserva/src/index.css
@@ -5,7 +5,10 @@
     outline: 0;
   }
   body, html {
-    background: #eee;
+    background-image: linear-gradient(to right top,
+     #ff0000, #ff0057, #ff0097, #df48cd, #a570f1, #8779f9, 
+     #6280fd, #2686ff, #327eff, #4074ff, #506afe, #5f5ffb);
+    
     font-family: 'Helvetica Neue', 'Helvetica', Arial, sans-serif;
     text-rendering: optimizeLegibility !important;
     -webkit-font-smoothing: antialiased !important;
