--- a/reserva/src/components/Login/login.css
+++ b/reserva/src/components/Login/login.css
@@ -33,9 +33,7 @@
         .BtnLogin {
           color: #fff;
           font-size: 16px;
-          background:linear-gradient(to right top,
-          #ff0000, #ff0057, #ff0097, #df48cd, #a570f1, #8779f9, 
-          #6280fd, #2686ff, #327eff, #4074ff, #506afe, #5f5ffb);
+          background: linear-gradient(to right, rgb(0, 242, 96), rgb(5, 117, 230));
           height: 56px;
           border: 0;
           border-radius: 5px;
